Kapitel im Report abgespaltet, neu

--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -108,19 +108,12 @@
   \pagestyle{plain}
 
 \chapter*{Problem Statement}
-Our main goal is to correctly identify handwritten digits based on the MNIST  ("Modified National Institute of Standards and Technology") data set.
-This data set consists of 42000 gray-scale images. Each image is 28 pixels in height and 28 pixels in width. Each pixel has a single pixel-value associated with it, indicating the lightness or darkness of that pixel \cite{kaggel}.
-
-\begin{figure}[h]
-	\includegraphics[width=1\textwidth, center]{Digits2}
-	\caption{Visualization of eight of these images}
-\end{figure}
-
+\input{introduction_to_problem.tex}
 
 
 
 \chapter*{Support Vector Machine}
-\input{introduction_to_problem.tex}
+\input{introduction_to_SVM.tex}
 
 
 
@@ -130,7 +123,6 @@ This data set consists of 42000 gray-scale images. Each image is 28 pixels in he
 
 \chapter*{Multi Class Classification Problem}
 \input{multiclassification.tex}
-
 
 
 
