--- a/Report/multiclassification.tex
+++ b/Report/multiclassification.tex
@@ -1,4 +1,8 @@
-Support Vector Machines are binary classifiers, meaning that there only two possible output labels. Usually one chooses them to be $1$ and $-1$. Our problem however was to classify unknown data into one out of $10$ different categories. Since there is no way to change one support vector machine so that it can choose from more than two labels we had to find a way to combine several SVMs, who together would be able to do so. There are a number of well known strategies tackling this issue. Let us first look at two very intuitive but also primitive strategies. The first one is One-vs-All classification. In this approach one trains as many SVMs as one has classes, so 10 in our case, and sets labels so that the i-th SVM has all training data with label i set to one and everything else to $-1$. .... This approach has many issues. Not uniquely classified. Advantage low compute time, one has to at least expect to train $10$ binary classifiers to divide into $10$ different categories. depends on which one first...? some areas several labels...  
+Support Vector Machines are binary classifiers, meaning that there only two possible output labels. Usually, one chooses them to be $1$ and $-1$. Our problem, however, was to classify unknown data into one out of ten different categories. Since rewriting the SVM algorithm to produce a separation into multiple classes is linked to great effort, we opt for finding a way to combine several SVMs, which together would be able to choose from more than one label. There are a number of well known strategies tackling this issue. Let us first look at two very intuitive but also primitive strategies. The first one is known as One-vs-All classification. In this approach one trains as many SVMs as there are classes, i.e. ten in our case, and sets labels so that the $i$-th SVM has all training data with label $i$ set to 1 and everything else to $-1$. 
+
+....
+
+This approach has many issues. Not uniquely classified. Advantage low compute time, one has to at least expect to train $10$ binary classifiers to divide into $10$ different categories. depends on which one first...? some areas several labels...  
 
 The other possibility is called One-vs-One classification. Here one only ever considers the data corresponding to two classes and sets one label to $1$ and the other one to $-1$. ... 
 In our case this would mean training $45$ SVMs (the number arises from the binary coefficient of 10 choose 2...). advantage/disadvantage
