added new chapter results

--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -54,8 +54,10 @@
 
 
 \begin{document}
+
   % Keine Seitenzahlen im Vorspann
   \pagestyle{empty}
+\noindent
 \begin{titlepage}
 	
 	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
@@ -121,10 +123,12 @@
 \input{our_own_SMO.tex}
 
 
-\chapter*{Multi Class Classification Problem}
+\chapter{Multi Class Classification Problem}
 \input{multiclassification.tex}
 
 
+\chapter{Results \& Conclusions}
+\input{results.tex}
 
 \bibliography{Report_bib}
   \bibliographystyle{alphadin}
