--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -77,7 +77,7 @@
 	%----------------------------------------------------------------------------------------
 	
 	\HRule \\[0.8cm]
-	{ \huge \bfseries Digit Recognition\\ with Support Vector Machine}\\[0.8cm] % Title of your document
+	{ \huge \bfseries Digit Recognition\\ with Support Vector Machines}\\[0.8cm] % Title of your document
 	\HRule \\[1.5cm]
 	
 	%----------------------------------------------------------------------------------------
@@ -123,11 +123,11 @@
 \input{our_own_SMO.tex}
 
 
-\chapter{Multi Class Classification Problem}
+\chapter*{Multi Class Classification Problem}
 \input{multiclassification.tex}
 
 
-\chapter{Results \& Conclusions}
+\chapter*{Results \& Conclusions}
 \input{results.tex}
 
 \bibliography{Report_bib}
