next round report

--- a/Report/Report_bib.bib
+++ b/Report/Report_bib.bib
@@ -14,3 +14,11 @@
 	ADDRESS = {Berlin, Heidelberg},
 }
 
+@article{dietterich1995solving,
+	title={Solving multiclass learning problems via error-correcting output codes},
+	author={Dietterich, Thomas G and Bakiri, Ghulum},
+	journal={Journal of artificial intelligence research},
+	volume={2},
+	pages={263--286},
+	year={1995}
+}
