--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -127,7 +127,7 @@
 \input{multiclassification.tex}
 
 
-\chapter*{Results \& Conclusions}
+\chapter*{Results, Difficulties \& Conclusions}
 \input{results.tex}
 
 \bibliography{Report_bib}
