--- a/Report/results.tex
+++ b/Report/results.tex
@@ -8,3 +8,5 @@ In general ECOC?
 Where do we bring in cross validation?
 
 General Conclusions? Difficulties?
+
+We only tried the first approach since as just mentioned the compute time for the second one was simply too high for us considering that we have a very large amount of training data. In the One-vs-All results were very very disappointing. In the case of a linear as well as a Gaussian kernel ... In the linear case this can be explained by the fact that our training data was simply not linearly seperable. 
